--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "private": true,
   "dependencies": {
     "leaflet": "^1.6.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-leaflet": "^2.6.3",
-    "react-redux": "^7.2.0",
-    "react-scripts": "3.4.0",
-    "redux": "^4.0.5"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
