Finally deploying to public build

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "3.0.0",
   "private": true,
   "dependencies": {
-    "leaflet": "^1.6.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "leaflet": "^1.7.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-leaflet": "^2.7.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
